# aippt

./: .gitignore  README.md
apps/api/: .env.example  pyproject.toml
apps/api/aippt_api/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  worker_cli.py
apps/api/aippt_api/routes/: auth.py  decks.py  files.py  health.py  jobs.py  ui.py
apps/api/aippt_api/services/: __init__.py  hermes_planner.py  hermes_review.py  job_runner.py  preview.py  workspaces.py
apps/api/tests/: test_user_isolation.py
docs/: aippt_architecture.md  aippt_auth.md  aippt_frontend_plan.md  aippt_hermes_deployment.md  aippt_hermes_memory_and_sjtu_template.md  aippt_hermes_skill_strategy.md  aippt_implementation_plan.md  aippt_ops_playbook.md  aippt_ppt_generation_method.md  aippt_project_compass.md  aippt_visual_qa_strategy.md  sjtu_ppt_agent_plan_v0_3.md  sjtu_ppt_skill_simplified_v0_3.md
docs/SJTU PPT 模板/: SKILL_SJTU.md  claudecode.md  generate_claudecode_ppt.py
docs/hermes_skills/aippt-sjtu-ppt/: SKILL.md
docs/hermes_skills/aippt-sjtu-ppt/references/: builder_contract.md  component_catalog.md  memory_policy.md  quality_gates.md  teaching_golden_examples.md
ops/: aippt-api.service  aippt-pj2-tunnel.service  aippt-worker.service  bootstrap_aippt_server.sh  create_private_repos.sh  git_remote_setup.md  hermes_sjtu_mimo_probe.sh  install_hermes_aippt_skill.sh  nginx-ai4edu-ppt.conf
