[project]
name = "aippt-api"
version = "0.1.0"
description = "Multi-user API for the AIPPT platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "email-validator>=2.2.0",
  "bcrypt>=4.0.1,<4.1",
  "httpx>=0.27.0",
  "itsdangerous>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "Pillow>=10.0.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
aippt-worker = "aippt_api.worker_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
